<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".LogInActivity">
    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"/>

    <ImageView
        android:layout_below="@id/toolbar"
        android:id="@+id/loginBG"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/shapes"
        android:contentDescription="@string/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:text="Hello there,\nWelcome back"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"
            android:textColor="#FFFFFF"/>
        <EditText
            android:id="@+id/emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/email"
            android:textColorHint="#A2A2A2"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:autofillHints="Email..." />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:textColorHint="#A2A2A2"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:autofillHints="Password..." />

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="20dp"
            android:text="@string/forgot_your_password"
            android:textColor="#3a3a3a"/>

        <ImageView
            android:id="@+id/signinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/signinbutton2" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="20dp"
            android:text="@string/new_here_sign_up"
            android:textColor="#3a3a3a"
            android:layout_marginStart="24dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            app:srcCompat="@drawable/other" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
               android:visibility="gone"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/facebook_icon"
                android:onClick="onClick"
                android:id="@+id/facebookButton"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:background="#ffffff"/>


        </FrameLayout>
    </LinearLayout>

</RelativeLayout>